--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "xo": "^0.11.2"
   },
   "dependencies": {
-    "color-name": "^1.1.1"
+    "color-name": "^1.1.1",
+    "color-temperature": "^0.2.7"
   }
 }
